Revert "WEB-4742 : Fix bmc.com internal links pointing to "http" URLs | Fixed…"

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-header/supportcentral-header.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-header/supportcentral-header.html
@@ -4,7 +4,7 @@
          <div class="global-bar layout-inner-wrap">
             <ul class="global-options">
                <li class="global-option"><a href="https://communities.bmc.com/welcome"  target="_self" >BMC Communities</a></li>
-               <li class="global-option"><a href="https://docs.bmc.com/"  target="_self" >BMC Docs</a></li>
+               <li class="global-option"><a href="http://docs.bmc.com/"  target="_self" >BMC Docs</a></li>
                <li class="global-option"><a href="/"  target="_self" >BMC.com</a></li>
                <li class="global-option navigation-search js-navigation-search" >
                <!-- WEB-7277 Support Coveo Changes START -->
@@ -44,7 +44,7 @@
             <div class="global-bar">
                <ul class="global-options">
                   <li class="global-option"><a href="https://communities.bmc.com/welcome"  target="_self" >BMC Communities</a></li>
-                  <li class="global-option"><a href="https://docs.bmc.com/"  target="_self" >BMC Docs</a></li>
+                  <li class="global-option"><a href="http://docs.bmc.com/"  target="_self" >BMC Docs</a></li>
                   <li class="global-option"><a href="/"  target="_self" >BMC.com</a></li>
                   <li class="global-option navigation-search js-navigation-search" >
                      <!-- WEB-7277 Support Coveo Changes START -->                     
