--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -288,7 +288,7 @@
 					#tallybox {
 						padding: 30px;
 						background: #002C8F;
-						margin: 30px 0;
+						margin: 0;
 						color: #fff;
 						font-size: 14px;
 						
