Update communities to community

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-header-personalised/supportcentral-header-personalised.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-header-personalised/supportcentral-header-personalised.html
@@ -3,7 +3,7 @@
       <div class="desktop-global-bar-container">
          <div class="global-bar layout-inner-wrap">
             <ul class="global-options">
-               <li class="global-option"><a href="https://communities.bmc.com/welcome"  target="_self" >BMC Communities</a></li>
+               <li class="global-option"><a href="https://community.bmc.com"  target="_self" >BMC Community</a></li>
                <li class="global-option"><a href="http://docs.bmc.com/"  target="_self" >BMC Docs</a></li>
                <li class="global-option"><a href="/"  target="_self" >BMC.com</a></li>
                <li class="global-option navigation-search js-navigation-search" >
@@ -43,7 +43,7 @@
          <div class="layout-inner-wrap">
             <div class="global-bar">
                <ul class="global-options">
-                  <li class="global-option"><a href="https://communities.bmc.com/welcome"  target="_self" >BMC Communities</a></li>
+                  <li class="global-option"><a href="https://community.bmc.com"  target="_self" >BMC Community</a></li>
                   <li class="global-option"><a href="http://docs.bmc.com/"  target="_self" >BMC Docs</a></li>
                   <li class="global-option"><a href="/"  target="_self" >BMC.com</a></li>
                   <li class="global-option navigation-search js-navigation-search" >
