--- a/front-end/Assets/src/css/pages/_document_container.scss
+++ b/front-end/Assets/src/css/pages/_document_container.scss
@@ -63,8 +63,8 @@
             text-align:center;
         }
     }
-    // All Mobile deivecs and Tab Landscape and Portrait start
 
+// Doc iframe css starts
     .documentContainer-iframe{
         display: flex;
         flex-direction: column-reverse;
