Changes for Text No activities User, News Carousel

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/support-news-carousel/support-news-carousel.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/support-news-carousel/support-news-carousel.html
@@ -1,7 +1,4 @@
-support central new carousal
-
 <sly data-sly-use.news="com.bmc.models.components.supportnewscarousel.NewsCarouselModel">
-    ${news.newsResults.body.status} </br>
     <sly data-sly-list.obj="${news.newsResults.body.data}">
         ${obj.titleName}</br>
         ${obj.link}</br>
@@ -10,3 +7,57 @@ support central new carousal
 ----------------------------------------------------</br></br>
     </sly>
 </sly>
+<div class="container psc-news">
+    <div class="left-news-arrow">
+      <span class="d-icon-angle_left"></span>
+    </div>
+    <div class="news-container-wrapper">
+      <div class="news-list">
+        <div class="news-block">
+          <h3><a href="#">News Title very long title that will not fit in one line</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        <div class="news-block">
+          <h3><a href="#">News Title</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum, ipsum sed lacinia dapibus, ante dui porttitor magna, nec posuere magna ex eget magna.</p>
+        </div>
+        
+      </div>
+    </div>
+    <div class="right-news-arrow">
+      <span class="d-icon-angle_right"></span>
+    </div>
+    
+  </div>
