--- a/front-end/Assets/src/css/modules/_support_personalized.scss
+++ b/front-end/Assets/src/css/modules/_support_personalized.scss
@@ -1,4 +1,4 @@
-// Module for Personalized Support Central (PSC is abbreviature) 
+// Module for Personalized Support Central (PSC is abbreviature)
 
 .support-search.psc {
 	fieldset {
@@ -12,6 +12,22 @@
 	}
 }
 
+.psc-orientation-checklist {
+	& {
+		display: flex;
+	}
+	& > div {
+		width: 33%;
+		display: flex;
+	}
+	& > div:nth-child(2) {
+		justify-content: center;
+	}
+	& > div:nth-child(3) {
+		justify-content: end;
+	}
+}
+
 .psc-fs-12 {
 	font-size: 12px;
 }
@@ -21,5 +37,90 @@
 		.CoveoSearchInterface .CoveoSearchbox {
 			margin-right: 0px;
 		}
+	}
+}
+
+.psc-news {
+	&.container {
+		padding: 0px;
+		margin-bottom: 30px;
+		position: relative;
+	}
+
+	.news-container-wrapper {
+		overflow: hidden;
+	}
+
+	.news-list {
+		display: flex;
+		justify-content: space-between;
+		padding: 10px 15px;
+	}
+
+	.news-block {
+		min-width: 30%;
+		max-width: 30%;
+		margin-right: 5%;
+		min-height: 100px;
+		box-shadow: 0 3px 4px rgba(0, 0, 0, 0.14),
+			0 9px 10px rgba(0, 0, 0, 0.06);
+		border-radius: 5px;
+		padding: 10px 20px;
+		& p {
+			font-size: 12px;
+		}
+	}
+
+	.news-block h3 {
+		text-overflow: ellipsis;
+		& a {
+			font-size: 18px;
+		}
+	}
+
+	.right-news-arrow,
+	.left-news-arrow {
+		position: absolute;
+		top: 0px;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 40px;
+		width:50px;
+	}
+
+	.left-news-arrow {
+		left: -30px;
+	}
+
+	.right-news-arrow {
+		right: -30px;
+	}
+}
+
+@media (max-width: 800px) {
+	.psc-news .news-block {
+		min-width: 90%;
+		max-width: 90%;
+		margin-right: 10%;
+		margin-left: 5%;
+	}
+	.psc-orientation-checklist {
+		& {
+			flex-direction: column;
+		}
+		& > div {
+			justify-content: center;
+			width: 100%;
+		}
+	}
+}
+
+@media (max-width: 1200px) and (min-width: 800px) {
+	.psc-news .news-block {
+		min-width: 42%;
+		max-width: 42%;
+		margin-right: 7%;
 	}
 }
