--- a/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
@@ -2,7 +2,7 @@
     <div class="extended-widget-header">
         <div class="top-section">
             <h2>Manage Your Cases</h2><a class="external-app-link btn btn-primary" 
-            [href]="widgets.casemgmt"
+            [href]="state.widgets.casemgmt"
             target="_blank">Go to Case Management</a>
         </div>
         <div class="description">Your most recent support cases</div>
@@ -16,6 +16,6 @@
             <div class="subject">{{case.Subject}}</div>
             <div class="dates"><span>Created: {{case.CreatedDate | date: 'dd-MMM-yyyy'}}</span><span>Modified: {{case.LastModifiedDate | date: 'dd-MMM-yyyy'}}</span></div>
         </div>
-        <adapt-pagination *ngIf="caseService.cases.length" rows="4" [totalRecords]="caseService.cases.length" (onPageChange)="paginate($event)"></adapt-pagination>
+        <adapt-pagination *ngIf="caseService.cases?.length" rows="4" [totalRecords]="caseService.cases.length" (onPageChange)="paginate($event)"></adapt-pagination>
     </div>
 </div>
