--- a/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
@@ -2,9 +2,9 @@
     <div class="extended-widget-header">
         <div class="top-section">
             <h2>Documentation</h2>
-            <a class="external-app-link btn btn-primary" [href]="widgets.docs" target="_blank">Go to the Documentation Center</a>
+            <a class="external-app-link btn btn-primary" [href]="state.widgets.docs" target="_blank">Go to the Documentation Center</a>
         </div>
-        <div class="description">{{widgetDescription}}</div>
+        <div class="description">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="docsService.busyConfig">
         <adapt-accordion>
