--- a/front-end/Assets/src/support-central-angular/src/styles.scss
+++ b/front-end/Assets/src/support-central-angular/src/styles.scss
@@ -1,107 +1,106 @@
 /* You can add global styles to this file, and also import other style files */
 html body {
-    font-size: inherit;
+  font-size: inherit;
 }
 
 html.js {
-    font-size: 100%;
+  font-size: 100%;
 }
 
 .support-header {
-    box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 .support-chat-now {
-    box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 app-root {
-    font-size: .8125rem;
+  font-size: 0.8125rem;
 }
 
 .extended-widget-container {
-    max-width: 1300px;
-    min-height: 500px;
-    padding: 20px 5px 10px 10px;
-    margin: auto;
-    position: relative;
+  max-width: 1300px;
+  min-height: 500px;
+  padding: 20px 5px 10px 10px;
+  margin: auto;
+  position: relative;
 }
 
 .extended-widget-header {
-    margin-bottom: 10px;
-    border-bottom: 1px solid #7C7F81;
-    .top-section {
-        & {
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-        }
-        h2 {
-            font-weight: normal;
-            margin: 10px 0 10px 20px;
-        }
-        .external-app-link {
-            font-weight: 600;
-            color: white;
-            &:hover {
-                color: white
-            }
-        }
+  margin-bottom: 10px;
+  border-bottom: 1px solid #7c7f81;
+  .top-section {
+    & {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
     }
-    .description {
-        margin-left: 20px;
-        margin-bottom: 5px;
+    h2 {
+      font-weight: normal;
+      margin: 10px 0 10px 20px;
     }
-    
+    .external-app-link {
+      font-weight: 600;
+      color: white;
+      &:hover {
+        color: white;
+      }
+    }
+  }
+  .description {
+    margin-left: 20px;
+    margin-bottom: 5px;
+  }
 }
 
 .adapt-tabs-controls {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .card-header .card-title {
-    font-size: 0.8125rem;
-    color: #313538;
+  font-size: 0.8125rem;
+  color: #313538;
 }
 
 .btn {
-    margin-right: 15px;
-    margin-bottom: 15px;
+  margin-right: 15px;
+  margin-bottom: 15px;
 }
 
 .btn.btn-secondary.btn-sm {
-    color: #313538;
-    background-color: #f9f9fa;
-    border-color: #d5d5dc;
-    border-top-color: rgb(213, 213, 220);
-    border-right-color: rgb(213, 213, 220);
-    border-bottom-color: rgb(213, 213, 220);
-    border-left-color: rgb(213, 213, 220);
-    padding: .375rem .75rem;
-    font-size: .75rem;
-    line-height: 1.5385;
-    border-radius: .125rem;
-    margin-bottom: 15px;
+  color: #313538;
+  background-color: #f9f9fa;
+  border-color: #d5d5dc;
+  border-top-color: rgb(213, 213, 220);
+  border-right-color: rgb(213, 213, 220);
+  border-bottom-color: rgb(213, 213, 220);
+  border-left-color: rgb(213, 213, 220);
+  padding: 0.375rem 0.75rem;
+  font-size: 0.75rem;
+  line-height: 1.5385;
+  border-radius: 0.125rem;
+  margin-bottom: 15px;
 }
-.btn.btn-secondary:hover{
-    color: #313538;
-    background-color: #d5d5dc;
-    border-color: #bebec9;
+.btn.btn-secondary:hover {
+  color: #313538;
+  background-color: #d5d5dc;
+  border-color: #bebec9;
 }
 
 @media (max-width: 1200px) {
-    .extended-widget-container {
-        padding: 20px 5px;
-    }
+  .extended-widget-container {
+    padding: 20px 5px;
+  }
 }
 
 @media (max-width: 500px) {
-    .extended-widget-header {
-        .top-section {
-            flex-direction: column;
-            .external-app-link {
-                margin-left: 20px;
-            }
-        }
+  .extended-widget-header {
+    .top-section {
+      flex-direction: column;
+      .external-app-link {
+        margin-left: 20px;
+      }
     }
+  }
 }
