removed select Version 2 as main

--- a/front-end/Assets/src/css/modules/_support_personalized.scss
+++ b/front-end/Assets/src/css/modules/_support_personalized.scss
@@ -125,6 +125,15 @@
 			width: 100%;
 		}
 	}
+	.psc-news  {
+		.left-news-arrow {
+			left: -10px;
+		}
+	
+		.right-news-arrow {
+			right: -10px;
+		}
+	}
 }
 
 @media (max-width: 1200px) and (min-width: 800px) {
