--- a/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
@@ -1,7 +1,7 @@
 <div class="extended-widget-container">
     <div class="extended-widget-header">
         <div class="top-section">
-            <h2>Manage Your Cases</h2><a class="external-app-link btn btn-primary" 
+            <h2>Case Management</h2><a class="external-app-link btn btn-primary" 
             [href]="state.widgets.casemgmt"
             target="_blank">Go to Case Management</a>
         </div>
