--- a/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/community/community.component.html
@@ -1,7 +1,7 @@
 <div class="extended-widget-container">
     <div class="extended-widget-header">
         <div class="top-section">
-            <h2>Ask The Community</h2>
+            <h2>Community</h2>
             <a class="external-app-link btn btn-primary" [href]="state.widgets.askCommunity" target="_blank">Go to the Community</a>
         </div>
         <div class="description">{{ state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
