--- a/front-end/Assets/src/support-central-angular/src/app/tile/tile.component.scss
+++ b/front-end/Assets/src/support-central-angular/src/app/tile/tile.component.scss
@@ -1,4 +1,16 @@
 .tile {
+    &.no-extend {
+        .tile-body {
+            width: 100%;
+            border-radius: 5px;
+        }
+        .tile-right {
+            width: 24%;
+        }
+        .tile-center {
+            width: 74%;
+        }
+    }
     & {
      position:relative;
      cursor: pointer;
@@ -7,12 +19,20 @@
      display: flex;
      border-radius: 5px;
      box-shadow: 0 3px 4px rgba(0,0,0,.14), 0 9px 10px rgba(0,0,0,.06);
-     min-height: 77px;
+     min-height: 80px;
     } 
     .tile-left {
          background-color: #4E5154;
-         width: 3%;
+         width: 0%;
          border-radius: 5px 0 0 5px;
+    }
+    .tile-body {
+        display:flex;
+        width: 82%;
+        &:hover {
+            background-color: #F9F9FA;
+        }
+        border-radius: 5px 0 0 5px;
     }
     .tile-center {
         & {
@@ -28,7 +48,7 @@
     .tile-right{
         & {
             // width: 11%; //1-st variant
-            width: 15%; //2-nd
+            width: 30%; //2-nd
             display: flex;
             justify-content: space-around;
             padding-top: 9px;
@@ -41,21 +61,26 @@
     }
     .tile-arrow {
         & {
-            position: absolute;
             // bottom: 10px; //1-st variant
             // right: 10px;// 1-st variant
             // height: 45px;
             // width: 45px;
             // border-radius: 25px; //1-st variant
+            height: auto;
             min-height: 77px; // 2-nd variant
-            width: 60px; // 2-nd variant
+            width: 18%; // 2-nd variant
             right: 0; // 2-nd variant
             font-size: 14px;
             // box-shadow: 0 3px 4px rgba(0, 0, 0, 0.14), 0 9px 10px rgba(0, 0, 0, 0.06);
             // background-color: #f86e00; //1-st variant
             display: flex;
+            border-radius: 0 5px 5px 0;
             justify-content: space-around;
             align-items: center;
+            border-left: 1px solid #D6D7D8;
+        }
+        &:hover {
+            background-color: #F9F9FA;
         }
         span {
             font-size: 25px;
