--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
@@ -63,7 +63,7 @@
                                             <embed src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"/>
                                         </div>                                   
                                       	<div data-sly-test="${!isdocumentPDF}" class="docContainerWrap" id="doc-iframe-container" >
-               								<iframe src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"/>
+               								<iframe src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"> </iframe>
             							</div>
 								</div>
 							</div>
