WEB-9473 add optional border

--- a/front-end/Assets/src/css/orion/_orion-split-components.scss
+++ b/front-end/Assets/src/css/orion/_orion-split-components.scss
@@ -93,7 +93,12 @@
     .imageContainer-no-cloud-bg {
         width: 100%;
         
-    } 
+    }
+	.border-grey {
+		img {
+			border: 1px solid #ddd;
+		}
+	}
     
 }
 
