Case Mangement link fix

--- a/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
@@ -2,7 +2,7 @@
     <div class="extended-widget-header">
         <div class="top-section">
             <h2>Case Management</h2><a class="external-app-link btn btn-primary" 
-            [href]="state.widgets.casemgmt"
+            [href]="state.widgets.manageCase"
             target="_blank">Go to Case Management</a>
         </div>
         <div class="description">Your most recent support cases</div>
