--- a/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/case-management/case-management.component.html
@@ -16,6 +16,6 @@
             <div class="subject">{{case.Subject}}</div>
             <div class="dates"><span>Created: {{case.CreatedDate | date: 'dd-MMM-yyyy'}}</span><span>Modified: {{case.LastModifiedDate | date: 'dd-MMM-yyyy'}}</span></div>
         </div>
-        <adapt-pagination *ngIf="caseService.cases?.length" rows="4" [totalRecords]="caseService.cases.length" (onPageChange)="paginate($event)"></adapt-pagination>
+        <adapt-pagination *ngIf="caseService.cases?.length && caseService.cases.length > 5 " rows="4" [totalRecords]="caseService.cases.length" (onPageChange)="paginate($event)"></adapt-pagination>
     </div>
 </div>
