--- a/front-end/Assets/src/css/pages/_document_container.scss
+++ b/front-end/Assets/src/css/pages/_document_container.scss
@@ -1,6 +1,9 @@
 .document_container{
+	iframe{
+		 border: none;
+	}
     #pdfReader{
-        border: 1px solid black; width: 100%;
+        border: 1px solid darkgray; width: 100%;
         embed{
             width: 100%;
             height: 100%;
@@ -66,6 +69,7 @@
 
 // Doc iframe css starts
     .documentContainer-iframe{
+	    border: 1px solid darkgray; width: 100%;
         display: flex;
         flex-direction: column-reverse;
         @media (min-width: $break-md) {
