--- a/front-end/Assets/src/css/orion/_orion-Secondary-Nav.scss
+++ b/front-end/Assets/src/css/orion/_orion-Secondary-Nav.scss
@@ -139,7 +139,8 @@
                                       
                 } 
                 &.activePage{
-                    a{                
+                    a{
+					    color:#ffffff;                
                         &:before{
                             @media(min-width: $break-md){                           
                                 background: #29a5d6;
