--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-banner/supportcentral-banner.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-banner/supportcentral-banner.html
@@ -1,4 +1,4 @@
-<section style="color:darkorange;" class="support-promo support-message-box">
+<section class="support-promo support-message-box psc-promo">
   <section><p class="align-center"><strong>We have created a new, personalized support portal experience, designed to help you find what you need more easily.<br><a href="https://stage.cms.bmc.com/support/support-central-redesign.html" target="_blank" class="small-btn">Try it!</a></p></section>
     ${message @ context='html'}
   </section>
