--- a/front-end/Assets/src/css/modules/_utility.scss
+++ b/front-end/Assets/src/css/modules/_utility.scss
@@ -1512,6 +1512,9 @@ color: #213443;
 .border-top-dash{
 	border-top: 1px dashed #ccc;
 }
+.border-grey {
+    border: 1px solid #ddd;
+}
 
 .word-wrap-break-word{
 	word-wrap: break-word;
