SAC img src changes, Banner Close Btn

--- a/front-end/Assets/src/css/modules/_support_personalized.scss
+++ b/front-end/Assets/src/css/modules/_support_personalized.scss
@@ -35,7 +35,16 @@
 .support-message-box.psc-promo {
 	p {
 		border-color: #F86e00;
+		position: relative;
 	}
+}
+
+.psc-banner-close-button {
+	position: absolute;
+	font-size: 30px;
+	top: -9px;
+	right: 4px;
+	cursor: pointer;
 }
 
 @media (min-width: 440px) {
