--- a/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
@@ -9,7 +9,7 @@
     <div class="extended-widget-body">
         <a class="sac-link" target="_blank" href="https://documents.bmc.com/products/documents/20/45/502045/502045.pdf">
             <div class="left">
-                <img src="/content/dam/bmc/support-central/bmc-support-model.PNG">
+                <img src="/content/dam/bmc/support/bmc-support-model.png">
             </div>
             <div class="center">
                 <h2>Upgrade to a proactive support model</h2>
@@ -17,7 +17,7 @@
         </a>
         <a class="sac-link" target="_blank" href="https://www.bmc.com/education/courses/find-courses.html#filter/\{%22type%22:%22edu-specific-types-177151087%22}">
             <div class="left">
-                <img src="/content/dam/bmc/support-central/education.PNG">
+                <img src="/content/dam/bmc/support/education.png">
             </div>
             <div class="center">
                <h2>Become BMC Certified</h2>
