--- a/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/docs/docs.component.html
@@ -4,7 +4,7 @@
             <h2>Documentation</h2>
             <a class="external-app-link btn btn-primary" [href]="state.widgets.docs" target="_blank">Go to the Documentation Center</a>
         </div>
-        <div class="description">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
+        <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="docsService.busyConfig">
         <adapt-accordion>
