--- a/front-end/Assets/src/support-central-angular/src/app/epd-component/epd-component.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/epd-component/epd-component.component.html
@@ -3,7 +3,7 @@
       <div class="top-section">
         <h2>Product Downloads</h2><a class="external-app-link btn btn-primary" [href]="state.widgets.prdDownloads" target="_blank">Go to the Download Center</a>
       </div>
-      <div class="description">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
+      <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}</div>
     </div>
     <div class="extended-widget-body" [ngBusy]="epdService.busyConfig">
       <app-epd-product *ngFor="let product of epdService.products" [product]="product"></app-epd-product>
