--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -255,6 +255,14 @@
 								text-align: center;
 							} 
 						}
+						// WEB-9417 
+						.orion_tooltip {
+							@media(min-width:$break-md){
+								padding-bottom: 0;
+								line-height: 10px;
+							}							
+							margin-left: 5px;
+						}
 					}
 					.nav{
 						margin: 40px 0 20px 0;
